<resources>
    <string name="app_name">Planner</string>
    <string name="undo">Undo</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="keep">Keep</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="due_today">Due Today</string>
    <string name="due_tomorrow">Due Tomorrow</string>
    <string name="due_upcoming">Upcoming</string>
    <string name="due_overdue">Overdue</string>
    <string name="priority">Priority</string>
    <string name="untitled">Untitled</string>
    <string name="no_upcoming_assignments">No upcoming assignments!</string>
    <string name="no_completed_assignments">No completed assignments.</string>
    <string name="header_in_progress">In Progress</string>
    <string name="header_completed">Completed</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="rate_and_review">Rate &amp; Review</string>
    <string name="sort_date">Earliest date first</string>
    <string name="sort_class">Alphabetically by class</string>
    <string name="sort_title">Alphabetically by title</string>
    <string name="sort_type">Group by category</string>
    <string name="delete_all">Delete all</string>
    <string name="edit_assignment_types">Edit categories</string>
    <string name="edit_classes">Edit classes</string>
    <string name="store_link"><a href="https://play.google.com/store/apps/details?id=go.planner.plannergo">Play Store listing</a></string>
    <string name="about_text0">© 2018 Benjamin Phillips\nMade with Android Studio\n\nSome assets ©Google under the Apache 2.0 license.</string>
    <string name="do_not_ask_again">Don\'t ask me again</string>
    <string name="changes_wont_be_saved">If you leave now, any changes you made will not be
        saved.\n\n(You can turn this message off in Settings.)</string>
    <string name="do_not_save">Leave without saving?</string>
    <string name="leave">Don\'t save</string>
    <string name="leave_and_save">Save</string>
    <string name="stay">Cancel</string>
    <string name="category">Category:</string>
    <string name="add_category_description">Add a new category</string>
    <string name="completed_note">(COMPLETED)</string>
    <string name="details">Add details</string>
    <string name="priority_assignment">Priority assignment</string>
    <string name="due">Due:</string>
    <string name="assignment_details">Assignment details</string>
    <string name="assignment">assignment</string>
    <string name="eos_ip">in progress.</string>
    <string name="eos_c">complete.</string>
    <string name="marked">Marked</string>
    <string name="as"> as </string>
    <string name="classes">Classes</string>
    <string name="donate">Donate</string>
    <string name="email_app_missing">"Could not find an email app."</string>
    <string name="about">About</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_us">Rate us!</string>
    <string name="repeat_tutorial">Repeat Tutorial</string>
    <string name="donation_plea">It takes a lot of time and effort to make this app, so any donations would be really appreciated! Thanks!</string>
    <string name="greeting">Hi there!</string>
    <string name="assignments_deleted">Assignments deleted.</string>
    <string name="untitled_assignment">untitled assignment</string>
    <string name="deleted">Deleted </string>
    <string name="list_item_icon">List Item Icon</string>
    <string name="add_new">Add new item:</string>
    <string name="no_duplicates">You can\'t have duplicates!</string>
    <string name="delete_all_check">Are you sure you want to delete all assignments?</string>
    <string name="move_to_trash_note">They will be moved to trash and deleted after 30 days</string>
    <string name="empty_assignment_set">There are no assignments.\nTo create a new assignment, press the +</string>
    <string name="new_a">New Assignment</string>
    <string name="default_title">Title</string>
    <string name="default_class">className</string>
    <string name="default_date">Wed, Dec 10, 2017</string>
    <string name="enter_class">Enter class/course</string>
    <string name="default_type">Category</string>
    <string name="enter_title_of_assignment">Enter title</string>
    <string name="pref_dark_mode">Dark mode</string>
    <string name="pref_color_scheme">Color Scheme</string>
    <string name="pref_class_colors">Color code titles by class</string>
    <string name="pref_show_time">Show time for assignments</string>
    <string name="pref_enable_priority">Put priority items first</string>
    <string name="pref_overdue_last">Put overdue items last</string>
    <string name="default_subtitle">Subtitle stuffy stuff</string>
    <string name="pref_save_remind">Remind me to save changes.</string>
    <string name="pref_notifications">Notifications</string>
    <string name="appearance">Appearance</string>
    <string name="experience">Experience</string>
    <string name="pref_notify">Notify me at </string>
    <string name="pref_days_before">Days before deadline</string>
    <string name="pref_2_notifs">I want two notifications</string>
    <string name="pref_drive_single_mode">Drive single backup mode</string>
    <string name="pref_drive_single_mode_summary">Drive import skips dialog and imports the most recent backup.\nLimits stored assignments to 5.</string>
    <string name="deletion_is_permanent">Assignments in the trash are permanently deleted after 30 days.</string>
    <string name="trash_is_empty">The trash is empty.</string>
    <string name="mThis">This</string>
    <string name="perm_delete_check">Permanently delete this?</string>
    <string name="gone_forever">will be gone forever."</string>
    <string name="empty_trash_check">Are you sure you want to empty the trash?</string>
    <string name="no_undo">You will not be able to undo this action.</string>
    <string name="empty_trash">Empty trash</string>
    <string name="restore">Restore</string>
    <string name="tut_text_a">Hi!</string>
    <string name="tut_text_b">Here\'s an awesome app to help you keep track of your assignments</string>
    <string name="tut_text_c">Tap the button below to create a new assignment- We\'ll fill it out for you this time.</string>
    <string name="skip">skip tutorial</string>
    <string name="start">Start Tutorial</string>
    <string name="tut_text_01">The plus button in the bottom right corner creates assignments.</string>
    <string name="tut_text_02">Tap it to create an assignment.</string>
    <string name="tut_text_03">Here\'s your first assignment (We\'ve filled it out for you)</string>
    <string name="tut_text_04">The title is in bold, and the due date is on the right.</string>
    <string name="tut_text_05">Swipe it to the right to mark it as done.</string>
    <string name="tut_text_06">All right!</string>
    <string name="tut_text_07">Note the words at the top of your screen. They mean you\'ll find your incomplete assignments here.</string>
    <string name="tut_text_08">Now tap the icon in the top left to open the menu drawer, and select \'Completed\'</string>
    <string name="tut_text_09">Checked off assignments show up here.</string>
    <string name="tut_text_10">We\'ve had enough of this assignment—delete it by swiping it to the left.</string>
    <string name="tut_text_11">Great</string>
    <string name="tut_text_12">Now note there\'s three little dots in the top</string>
    <string name="tut_text_13">They open a menu primarily for changing the organization of the assignments</string>
    <string name="tut_text_14">Right now we\'re going to use it for something else:</string>
    <string name="tut_text_15">We\'re going to add a category you can use to organize your assignments.</string>
    <string name="tut_text_16">Tap the 3 dots at the top right and select \'Edit categories\'</string>
    <string name="tut_text_17">Press the plus button to make a new category</string>
    <string name="tut_text_18">Now, when you make a new assignment, you can select \"</string>
    <string name="tut_text_18_">\" as the category</string>
    <string name="tut_text_19">Well that\s it for this tutorial!</string>
    <string name="tut_text_20">(If you need to replay the tutorial, you can find it under Help &amp; Feedback)</string>
    <string name="tut_text_21">Press the back arrow at the top left to end the tutorial</string>
    <string name="got_it">Got it</string>
    <string name="add_category">Add a new category! </string>
    <string name="hw_1">Homework #1</string>
    <string name="math">Math</string>
    <string name="categories">Categories</string>
    <string name="channel_name">Main Channel</string>
    <string name="channel_description">Notification channel for reminders</string>
    <string name="setting_notification_reminder_time_title">Remind me the day before at</string>
    <string name="alert_error_consuming">Error while consuming: %1$s</string>
    <string name="alert_already_purchased">Item is already purchased</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="button_purchase">Donate</string>
    <string name="button_buy">Buy</string>
    <string name="button_own">Own</string>
    <string name="button_update">Update</string>
    <string name="button_change">Change</string>
    <string name="header_inapp">Donation options</string>
    <string name="header_subscriptions">Subscriptions</string>
    <string name="error_no_skus">We didn\'t find any SKUs to display&#8230; Check your internet
        connection and make sure your Google Developer Console was setup correctly.</string>
    <string name="error_billing_unavailable">Billing unavailable. Make sure your Google Play app
        is setup correctly.</string>
    <string name="error_billing_default">Billing unavailable. Please check your device.</string>
    <string name="open_nav_menu">Open navigation menu</string>
    <string name="empty_list">List is empty.</string>
    <string name="empty_list_content_descr">Indicates when the list is empty.</string>
    <string name="icon_desc">Fancy shmancy icon</string>
    <string name="enter_a_category_name">Enter a category name</string>
    <string name="or">OR</string>
    <string name="pick_an_option_below">Pick an option below</string>
    <string name="essays">Essays</string>
    <string name="studying">Studying</string>
    <string name="everything_else">Everything else</string>
    <string name="add_new_item">Add new item</string>
    <string name="profile_pic">Profile pic</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign in</string>
    <string name="import_assignments">Import from local storage</string>
    <string name="export_assignments">Export to local storage</string>
    <string name="filters">Filters</string>
    <string name="file_read_error">Could not read file.</string>
    <string name="file_permission_error">Permission denied.</string>
    <string name="file_save_complete">Saved to</string>
    <string name="file_read_complete">Successfully imported assignments</string>
    <string name="cancelled">Cancelled action.</string>
    <string name="login_error">Error logging in.</string>
    <string name="import_from_drive">Import from Drive</string>
    <string name="export_to_drive">Export to Drive</string>
    <string name="no_files">Could not find any backups.</string>
    <string name="manage_drive_backups">Manage drive backups</string>
</resources>