<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/in_progress"
            android:icon="@drawable/ic_assignment_golden_24dp"
            android:title="@string/header_in_progress" />
        <item
            android:id="@+id/complete"
            android:icon="@drawable/ic_assignment_turned_in_green_24dp"
            android:title="@string/header_completed" />
        <item
            android:id="@+id/trash"
            android:icon="@drawable/ic_delete_maroon_24dp"
            android:title="@string/trash" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_grey_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/help_and_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/help_and_feedback" />
    </group>
</menu>