<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorialActivity"
    android:background="@android:color/holo_blue_light">

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tut_text_01"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:layout_margin="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/t2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tut_text_02"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/t1"
        app:layout_constraintStart_toStartOf="@id/t1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="36dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/textWhite"
        android:textSize="16sp"
        android:onClick="onQuit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/t3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tut_text_03"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="@+id/fab"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onAdd"
        app:fabSize="normal"
        />

</android.support.constraint.ConstraintLayout>