<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/hw_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title_of_assignment"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/hw_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_class"
        android:inputType="textCapSentences" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/due"/>

        <EditText
            android:id="@+id/hw_due_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:focusable="false" />
        <EditText
            android:id="@+id/hw_due_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false" />

    </LinearLayout>

    <EditText
        android:id="@+id/hw_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="5" />

    <Spinner
        android:id="@+id/hw_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" />

</LinearLayout>