<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/assignment_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:elevation="4dp"
    android:orientation="horizontal"
    android:padding="4dp"
    android:layout_marginBottom="1dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:text="@string/default_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/class_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="4dp"
        android:text="@string/default_class"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <View
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@id/date"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:padding="4dp"
        android:text="@string/default_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

</android.support.constraint.ConstraintLayout>